tera/src/snapshot_tests/snapshots/tera__snapshot_tests__build_errors__build_errors@syntax__invalid_tag.txt.snap
---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/syntax/invalid_tag.txt
---
Failed to parse 'test.html'

 Syntax error --> [test.html:2:5]
  |
2 | hello
  |      ^---
  = Unexpected end of input
